--- a/config-dept-client.yml
+++ b/config-dept-client.yml
@@ -5,15 +5,32 @@ spring:
 
 ---
 server: 
-  port: 7001
+  port: 8001
 
 spring: 
   profiles: dev
   application:
-    name: config-eureka-client
+    name: config-dept-client
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
+    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
+    url: jdbc:mysql://localhost:3306/clouddb01              # 数据库名称
+    username: root
+    password: 123456
+    dbcp2:
+      min-idle: 5                              # 数据库连接池的最小维持连接数
+      initial-size: 5                                       # 初始化连接数
+      max-total: 5                                          # 最大连接数
+      max-wait-millis: 200                                  # 等待连接获取的最大超时时间
 
-eureka: 
-  instance: 
-    hostname: eureka7001.com
-  client: 
-    register-with-eureka: false
+mybatis:
+  type-aliases-package: top.gradual.springcloud.entities    # 所有Entity别名类所在包
+  mapper-locations: classpath:mybatis/mapper/*.xml         # mapper映射文件
+
+eureka:
+  client:   #客户端注册进服务内
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka
+  instance:
+    instance-id: ${spring.application.name}:${server.port}   #自定义服务名称信息
+    prefer-ip-address: true             #访问路径显示ip
